--- a/amadeo/css/main.css
+++ b/amadeo/css/main.css
@@ -38,6 +38,11 @@ h5, .h5 {
     font-size: 20px;
 }
 
+.indent-paragraf
+{
+    text-indent: 50px;
+}
+
 .base-color-lighter {
     background-color: #fbefde !important;
     color: #646464 !important;
@@ -118,7 +123,20 @@ h5, .h5 {
 {
     border: 1px solid #fbefde;
     width: 100%;
-    height: 100%;
+    height: 100%;   
+}
+
+.more-link
+{
+    font-family: 'Helvetica LT Std' !important;
+    color: #9c9c9c;
+    font-weight: 200;
+}
+
+.more-link > img
+{
+    height: 10px;
+    vertical-align: top;
 }
 
 
