--- a/amadeo/css/main.css
+++ b/amadeo/css/main.css
@@ -16,8 +16,7 @@ h1, h2, h3, h4, h5,
     font-weight: bold;
 }
 
-h2:before, .h2:before,
-h2:after, .h2:after
+.line-title:before, .line-title:after
 {
     content: '';
     display: inline-block;
