--- a/amadeo/css/main.css
+++ b/amadeo/css/main.css
@@ -180,7 +180,6 @@ a, a:hover{
     }
 }
 
-
 /*navbar*/
 
 .nav2 {
@@ -295,14 +294,14 @@ a, a:hover{
 .social-icon {
     width: 40px;
     vertical-align: bottom;
-    filter: brightness(1000%);
+    filter: grayscale(100%) brightness(0%) invert(100%);
 }
 
 .logo-partner {
     width: 85px;
     vertical-align: bottom;
-    margin: 0px 15px;
-    filter: brightness(2000%);
+    margin-right: 15px;
+    filter: grayscale(100%) brightness(0%) invert(100%);
 }
 
 .input-message {
@@ -417,6 +416,7 @@ a, a:hover{
     .nav2>.nav-logo>li>a>img.primary {
         opacity: 1;
         -webkit-transition: opacity 1s ease-out;
+        transform: translateY(-14px);
         /* For Safari 3.1 to 6.0 */
         transition: opacity 1s ease-out;
     }
@@ -600,13 +600,14 @@ a, a:hover{
     .logo-partner {
         width: 85px;
         vertical-align: bottom;
-        margin: 0px 15px;
+        margin: 0px;
+        margin-right: 15px;
         filter: grayscale(100%) brightness(0%) invert(100%);
         -webkit-transition: filter 0.5s;
         transition: filter 0.5s;
     }
     .logo-partner:hover {
-        filter: brightness(100%);
+        filter: grayscale(0%);
     }
     .captcha-block {
         float: left;
@@ -615,5 +616,30 @@ a, a:hover{
         margin: 17px 17px;
         clear: none;
         float: left;
+    }
+}
+
+@media(max-width:768px)
+{
+    .article-block-hover > p
+    {
+        font-size: 14px;
+        height: 65px;
+        overflow: hidden;
+    }
+
+    .article-block-hover > .hidden-idle > .button-link
+    {
+        padding: 5px 35px;
+        margin: 0px; 
+    }
+    .article-block-hover > h4
+    {
+        height: 40px;
+    }
+    
+    .line-title:before, .line-title:after
+    {
+        width: 30px;
     }
 }
